--- a/Gondwana/templates/base.html
+++ b/Gondwana/templates/base.html
@@ -2,9 +2,11 @@
 <title>{% block title %}{% endblock %} - Gondwana</title>
 <!-- add Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<link rel="stylesheet" href="/static/main.css">
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="/static/main.js"></script>
 <!-- add Bootstrap end -->
 
 <!-- navbar -->
@@ -16,25 +18,33 @@
 ] %}
 {% set active_page = active_page|default('ping') %}
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav mr-auto">
-            {% for href, id, caption in nav_bar %}
-            <li class="nav-item {% if id == active_page %}active{% endif %}">
-                <a class="nav-link" href="{{ href|e }}">{{ caption }}</a>
-            </li>
-            {% endfor %}
-        </ul>
+<div class="vertical-nav bg-dark" id="sidebar">
+    <div class="py-4 px-3 mb-4 bg-dark">
+        <div class="media-body">
+            <h4 class="font-weight-white text-muted mb-0">Gondwana</h4>
+        </div>
     </div>
-</nav>
+
+    <ul class="nav flex-column bg-dark mb-0">
+        {% for href, id, caption in nav_bar %}
+        <li class="nav-item {% if id == active_page %}active{% endif %}">
+            <a href="{{href|e}}" class="nav-link text-light font-italic bg-dark">
+                {% if id == active_page %}> {% endif %}{{caption}}
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
 <!-- navbar end -->
 
-<section>
-    <header>
-        {% block header %}{% endblock %}
-    </header>
-    {% for message in get_flashed_messages() %}
-        <div>{{ message }}</div>
-    {% endfor %}
-    {% block content %}{% endblock %}
-</section>
+<div class="container">
+    <section>
+        <header>
+            {% block header %}{% endblock %}
+        </header>
+        {% for message in get_flashed_messages() %}
+            <div>{{ message }}</div>
+        {% endfor %}
+        {% block content %}{% endblock %}
+    </section>
+</div>
