--- a/Gondwana/templates/base.html
+++ b/Gondwana/templates/base.html
@@ -39,12 +39,14 @@
 
 <div class="container">
     <section>
-        <header>
-            {% block header %}{% endblock %}
-        </header>
         {% for message in get_flashed_messages() %}
             <div>{{ message }}</div>
         {% endfor %}
-        {% block content %}{% endblock %}
+        <div class="page-header">
+            <h5>{% block header %}{% endblock %}</h5>
+        </div>
+        <div class="page-content">
+            {% block content %}{% endblock %}
+        </div>
     </section>
 </div>
