change button text

--- a/Gondwana/templates/channel/index.html
+++ b/Gondwana/templates/channel/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block button %}
-<a href="{{ url_for('channel.channel_create') }}" type="button" class="btn btn-info">Add</a>
+<a href="{{ url_for('channel.channel_create') }}" type="button" class="btn btn-info">Create Channel</a>
 {% endblock %}
 
 {% block content %}
