--- a/Gondwana/templates/channel/create.html
+++ b/Gondwana/templates/channel/create.html
@@ -5,7 +5,7 @@ Create Channel
 {% endblock %}
 
 {% block header %}
-    <h1>Create Channel</h1>
+Create Channel
 {% endblock %}
 
 {% block content %}
