--- a/Gondwana/templates/channel/create.html
+++ b/Gondwana/templates/channel/create.html
@@ -9,7 +9,7 @@ Create Channel
 {% endblock %}
 
 {% block content %}
-<form>
+<form action="{{ url_for('channel.channel_create') }}" method="POST">
     <div class="form-group row">
         <label for="inputName" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
