--- a/Gondwana/templates/channel/create.html
+++ b/Gondwana/templates/channel/create.html
@@ -13,25 +13,25 @@ Create Channel
     <div class="form-group row">
         <label for="inputName" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputName" placeholder="Display Name">
+            <input type="text" class="form-control" name="inputName" id="inputName" placeholder="Display Name">
         </div>
     </div>
     <div class="form-group row">
         <label for="inputWebsite" class="col-sm-2 col-form-label">Website URL</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputWebsite" placeholder="http://www.example.com">
+            <input type="text" class="form-control" name="inputWebsite" id="inputWebsite" placeholder="http://www.example.com">
         </div>
     </div>
     <div class="form-group row">
         <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+            <input type="email" class="form-control" name="inputEmail" id="inputEmail" placeholder="Email">
         </div>
     </div>
     <div class="form-group row">
         <label for="inputApikey" class="col-sm-2 col-form-label">API Key</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputApikey" placeholder="API Key">
+            <input type="text" class="form-control" name="inputApikey" id="inputApikey" placeholder="API Key">
         </div>
     </div>
     <div class="form-group row">
