add channel index view

--- a/Gondwana/templates/channel/index.html
+++ b/Gondwana/templates/channel/index.html
@@ -9,5 +9,29 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Content</h1>
+    <table class="table table-striped table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th>Name</th>
+                <th>Website</th>
+                <th>Email</th>
+                <th>API Key</th>
+                <th>OPERATIONS</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for channel in channels %}
+            <tr>
+                <td>{{ channel.name }}</td>
+                <td>{{ channel.website_url}}</td>
+                <td>{{ channel.email}}</td>
+                <td>{{ channel.api_key}}</td>
+                <td>
+                    <a role="button" href="#" class="btn btn-primary btn-sm">Edit</a>
+                    <a role="button" href="#" class="btn btn-danger btn-sm">Delete</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
