--- a/Gondwana/templates/channel/index.html
+++ b/Gondwana/templates/channel/index.html
@@ -5,10 +5,11 @@
 {% endblock %}
 
 {% block button %}
-<a href="{{ url_for('channel.channel_create') }}" type="button" class="btn btn-info">Create Channel</a>
+<a href="{{ url_for('channel.channel_create') }}" role="button" class="btn btn-info">Create Channel</a>
 {% endblock %}
 
 {% block content %}
+    {% if channels %}
     <table class="table table-striped table-hover">
         <thead class="thead-dark">
             <tr>
@@ -34,4 +35,7 @@
             {% endfor %}
         </tbody>
     </table>
+    {% else %}
+    <h3>Please <a href="{{ url_for('channel.channel_create') }}" role="button" class="btn btn-lg btn-info">Create Channel</a></h3>
+    {% endif %}
 {% endblock %}
