--- a/Gondwana/templates/channel/index.html
+++ b/Gondwana/templates/channel/index.html
@@ -33,7 +33,7 @@
                 <td>{{ channel.api_key}}</td>
                 <td>
                     <a role="button" href="#" class="btn btn-primary btn-sm">Edit</a>
-                    <a role="button" href="#" class="btn btn-danger btn-sm">Delete</a>
+                    <a role="button" href="{{ url_for('channel.channel_delete', id=channel.id) }}" class="btn btn-danger btn-sm">Delete</a>
                 </td>
             </tr>
             {% endfor %}
