--- a/Gondwana/templates/base.html
+++ b/Gondwana/templates/base.html
@@ -34,10 +34,23 @@
 <!-- navbar end -->
 
 <div class="container">
+
+<!-- flash message alert -->
+{% with messages = get_flashed_messages(with_categories=true) %}
+{% if messages %}
+  {% for category, message in messages %}
+  <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
+    <strong>{{ category }}:</strong> <span>{{ message }}</span>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  {% endfor %}
+{% endif %}
+{% endwith %}
+<!-- flash message alert end -->
+
     <section>
-        {% for message in get_flashed_messages() %}
-            <div>{{ message }}</div>
-        {% endfor %}
         <div class="page-header">
             {% block header %}{% endblock %} <div class="float-right">{% block button %}{% endblock %}</div>
         </div>
