--- a/Gondwana/templates/base.html
+++ b/Gondwana/templates/base.html
@@ -40,7 +40,7 @@
 {% if messages %}
   {% for category, message in messages %}
   <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
-    <strong>{{ category }}:</strong> <span>{{ message }}</span>
+    <strong>{{ category | upper }}:</strong> <span>{{ message }}</span>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
