set active_page for nav bar

--- a/Gondwana/templates/base.html
+++ b/Gondwana/templates/base.html
@@ -12,8 +12,8 @@
 <!-- navbar -->
 {% set nav_bar = [
     ('/', 'dashboard', 'Dashboard'),
-    ('/order/index', 'order_index', 'Order'),
-    ('/channel/index', 'channel_index', 'Channel'),
+    ('/order/index', 'order', 'Order'),
+    ('/channel/index', 'channel', 'Channel'),
     ('/ping', 'ping', 'Ping'),
 ] %}
 {% set active_page = active_page|default('ping') %}
