--- a/Gondwana/templates/base.html
+++ b/Gondwana/templates/base.html
@@ -16,7 +16,7 @@
     ('/channel/index', 'channel', 'Channel'),
     ('/ping', 'ping', 'Ping'),
 ] %}
-{% set active_page = active_page|default('ping') %}
+{% set active_page = active_page|default('dashboard') %}
 
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Gondwana</a>
