--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -16,7 +16,25 @@
 
 {% block content %}
     {% if orders %}
-    <h3>Orders</h3>
+    <table class="table table-striped table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th>OrderId</th>
+                <th>OPERATIONS</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for order in orders %}
+            <tr>
+                <td>{{ order.order_id }}</td>
+                <td>
+                    <a role="button" href="{{ url_for('order.order_index') }}" class="btn btn-primary btn-sm">Edit</a>
+                    <a role="button" href="{{ url_for('order.order_index') }}" class="btn btn-danger btn-sm">Delete</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
     {% else %}
     <h3>No orders here. Please <a href="{{ url_for('order.order_update') }}" role="button" class="btn btn-lg btn-info">Update</a></h3>
     {% endif %}
