--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -12,12 +12,11 @@
 
 {% block button %}
 <div class="btn-group">
-    <button type="button" class="btn btn-info btn-secondary">Filter</button>
-    <button type="button" class="btn btn-info btn-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent">
-        <span class="sr-only">Toggle Dropdown</span>
+    <button type="button" class="btn btn-info btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Filter: {% if active_channel %}{{ active_channel.name }}{% else %}ALL{% endif %}
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuFilter">
-        <a class="dropdown-item" href="{{ url_for('order.order_index') }}">All</a>
+        <a class="dropdown-item" href="{{ url_for('order.order_index') }}">ALL</a>
         {% if channels %}
             <div class="dropdown-divider"></div>
             {% for channel in channels %}
