--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -45,7 +45,7 @@
             <tr>
                 <td>{{ order.channel.name }}</td>
                 <td>{{ order.order_id }}</td>
-                <td>{{ order.status }}</td>
+                <td>{{ order.status|order_stauts_2_name }}</td>
                 <td>
                     <a role="button" href="{{ url_for('order.order_index') }}" class="btn btn-primary btn-sm">Edit</a>
                     <a role="button" href="{{ url_for('order.order_index') }}" class="btn btn-danger btn-sm">Delete</a>
