--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -12,7 +12,7 @@
 
 {% block button %}
 <div class="btn-group">
-    <button type="button" class="btn btn-info btn-secondary">Filter</button>
+    <button type="button" class="btn btn-info btn-secondary">FILTER</button>
     <!-- channel filter -->
     <div class="btn-group">
         <button id="channelFilter" type="button" class="btn btn-info btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
