--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block button %}
+<!-- filter -->
 <div class="btn-group">
     <button type="button" class="btn btn-info btn-secondary">FILTER</button>
     <!-- channel filter -->
@@ -55,8 +56,11 @@
     </div>
     <!-- status filter end -->
 </div>
+<!-- filter end -->
 
+<!-- update -->
 <a href="{{ url_for('order.order_update') }}" role="button" class="btn btn-success">Update</a>
+<!-- update end -->
 {% endblock %}
 
 {% block content %}
