--- a/Gondwana/templates/base.html
+++ b/Gondwana/templates/base.html
@@ -34,7 +34,7 @@
     <!-- search -->
     <form class="form-inline" action="{{ url_for('order.order_index') }}" method="POST">
         <input class="form-control mr-sm-2" id="order_id" name="order_id" type="search" placeholder="Order ID" aria-label="Search">
-        <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-danger my-2 my-sm-0" type="submit">Search</button>
     </form>
     <!-- search end -->
 </nav>
